renamed RuleManager to Solver